# gamozolabs-fuzz-with-emus

./: Cargo.toml  README  README_objdump  a.out  ldscript.ld  moose.rs  test.c  test.rs  test_app  zz.sh
fuzz_results/: Makefile  plot.plt  stats.txt
shared/falkhash/src/: lib.rs
src/: emulator.rs  jitcache.rs  main.rs  mmu.rs  primitive.rs
test-jit/: Makefile  test.c  test.cpp  test.rs
