[package]
name = "fuzz_with_emus"
version = "0.1.0"
authors = ["sunjangyo12 <sunjangyo12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falkhash = { path = "shared/falkhash" }
aht = { path = "shared/aht" }
atomicvec = { path = "shared/atomicvec" }
